[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Systems/GridManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/LevelLogic/RestartScene.gd" type="Script" id=2]
[ext_resource path="res://Assets/Text/YouLose!.png" type="Texture" id=3]
[ext_resource path="res://Assets/Text/Retry.png" type="Texture" id=4]
[ext_resource path="res://Assets/Audio/Lose.mp3" type="AudioStream" id=5]

[node name="RestartScene1" type="Node2D"]
script = ExtResource( 2 )

[node name="GridManager" parent="." instance=ExtResource( 1 )]

[node name="YouLose!" type="Sprite" parent="."]
position = Vector2( 325, 160 )
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="Retry" type="Button" parent="."]
margin_left = 277.0
margin_top = 201.0
margin_right = 490.0
margin_bottom = 231.0

[node name="Retry" type="Sprite" parent="Retry"]
position = Vector2( 91, 14 )
texture = ExtResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="Retry" to="." method="_on_Retry_pressed"]
